<resources>
    <string name="app_name">MyTestingFirstApps</string>
    <string name="go_to_other_apps_text">Go To Other Apps</string>
    <string name="go_to_other_apps_activity">Go To Other Activity</string>
    <string name="back_to_first_activity">Back to First Activity</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="google_maps_key">Dhaka</string>
    <string name="go_to_google_map">Go To Google Map</string>
    <string name="open_google_map_here">Open Google Map Here</string>
    <string name="send_broadcast_message">Send BroadCast Message</string>
    <string name="chat_gpt">Chat GPT</string>
    <string name="crop_image_view">Crop Image View</string>
    <string name="crop_rotation">Crop Rotation</string>
    <string name="image_crop_library">Image Crop Library</string>
</resources>