<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/eidText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="50dp"
            android:background="@color/teal_200"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/go_to_other_apps_activity"
            app:layout_constraintTop_toBottomOf="@+id/eidText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/mapButton"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/go_to_google_map"
            android:textColor="@color/black"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:id="@+id/openMapButton"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/open_google_map_here"
            android:textColor="@color/black"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mapButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:id="@+id/cropImageActivity"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/crop_image_view"
            android:textColor="@color/black"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/openMapButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toBottomOf="@+id/cropImageActivity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription,ImageContrastCheck"/>

</androidx.constraintlayout.widget.ConstraintLayout>