<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

    <EditText
            android:id="@+id/eidText2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/text3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="50dp"
            android:background="@color/teal_200"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/go_to_other_apps_text"
            app:layout_constraintTop_toBottomOf="@+id/eidText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="50dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/back_to_first_activity"
            app:layout_constraintTop_toBottomOf="@+id/text3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/chatGPT"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/chat_gpt"
            android:textColor="@color/black"
            android:background="@color/cardview_light_background"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>